arreglando filtro regiones

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </div>
         </div>
         <div class="dropdown col-lg-3">
-          <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="nombreRegion">
               Filter by Region
           </button>
           <ul class="dropdown-menu" id="Regiones">
@@ -87,8 +87,8 @@
           </div>
         </nav>
       </div>
+
       <div class="offcanvas-body mt-5">
-        
         <div class="container">
           <div class="back pb-5">
             <button type="button" class="btn border rounded-2 d-flex flex-nowrap align-items-center justify-content-center gap-2" data-bs-dismiss="offcanvas">
