--- a/index.html
+++ b/index.html
@@ -55,11 +55,7 @@
               Filter by Region
           </button>
           <ul class="dropdown-menu" id="Regiones">
-<!--             <li><a class="dropdown-item" href="#">Africa</a></li>
-            <li><a class="dropdown-item" href="#">America</a></li>
-            <li><a class="dropdown-item" href="#">Asia</a></li>
-            <li><a class="dropdown-item" href="#">Europe</a></li>
-            <li><a class="dropdown-item" href="#">Oceania</a></li> -->
+            <!-- Aca van las regiones -->
           </ul>
         </div>
       </div>
@@ -97,36 +93,9 @@
             </button>
           </div>
           <div class="row gap-3" id="infoPais">
-            <div class="col-sm-12 col-lg-3 p-0">
-              <img src="https://picsum.photos/375/200? w-100 h-100" alt="imagenes">
-            </div>
-            <div class="col col-lg-3 border w-100">
-              <div class="row gap-3">
-                <div class="col-sm-12  bg-warning d-flex flex-column">
-                  <h3>Pais</h3>
-                  <div class="d-flex flex-column">
-                    <span>Native Name: </span>
-                    <span>Population: </span>
-                    <span>Region: </span>
-                    <span>Sub Region: </span>
-                    <span>Capital: </span>
-                  </div>
-                </div>
-                <div class="col-sm-12 bg-danger d-flex flex-column">
-                  <span>Top Level Domain: </span>
-                  <span>Currencies: </span>
-                  <span>Lenguagues: </span>
-                </div>
-                <div class="col d-flex">
-                  <h1>Border Countries: </h1>
-                  <div class="d-flex col-12">
-                    <button type="button" class="btn border rounded-2 justify-content-center">españa</button>
-                    <button type="button" class="btn border rounded-2 justify-content-center">Germany</button>
-                    <button type="button" class="btn border rounded-2 justify-content-center">France</button>
-                  </div>
-                </div>
-              </div>
-            </div>
+            <!-- Aca van las cards con la info individual -->
+
+            
           </div>
         </div>
       </div>
