--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
   <main class="main">
 
     <!-- Menu de busqueda -->
-    <div class="conteiner mb-5">
-      <div class="row mw justify-content-around gap-3">
+    <div class="conteiner-fluid mb-5">
+      <div class="row mw gap-3">
         <div class="col-lg-4">
           <div class="d-flex border rounded-4 ">
             <span class="btn disabled border-0 material-symbols-outlined busq">search</span>
@@ -66,42 +66,40 @@
         <!-- Aca van todas las cardas -->
 
     </section>
-
-    <!-- INsertando el offcanvas -->
-    <div class="offcanvas offcanvas-start w-100 h-100" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
-      <div class="offcanvas-header">
-        <!-- Dark Mode -->
-        <nav class="navbar fixed-top bg-body-tertiary bd">
-          <div class="container">
-            <h3 class="navbar-brand">Where in the world?</h3>
-            <div>
-              <button class ="btn d-flex gap-2 navDark" id="switch2">
-                <span class="material-symbols-outlined luna">dark_mode</span>
-                <span class="nunito">Dark Mode</span>
+  </main>
+      <!-- INsertando el offcanvas -->
+      <div class="offcanvas offcanvas-start w-100 h-100" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
+        <div class="offcanvas-header">
+          <!-- Dark Mode -->
+          <nav class="navbar fixed-top bg-body-tertiary bd">
+            <div class="container">
+              <h3 class="navbar-brand ">Where in the world?</h3>
+              <div>
+                <button class ="btn d-flex gap-2 navDark" id="switch2">
+                  <span class="material-symbols-outlined luna">dark_mode</span>
+                  <span class="nunito">Dark Mode</span>
+                </button>
+              </div>
+            </div>
+          </nav>
+        </div>
+  
+        <div class="offcanvas-body mt-5">
+          <div class="container-fluid">
+            <div class="back pb-5">
+              <button type="button" class="btn border rounded-2 d-flex flex-nowrap align-items-center justify-content-center gap-2" data-bs-dismiss="offcanvas">
+                <span class="material-symbols-outlined">keyboard_backspace</span>
+                <span>Back</span>
               </button>
             </div>
-          </div>
-        </nav>
-      </div>
-
-      <div class="offcanvas-body mt-5">
-        <div class="container">
-          <div class="back pb-5">
-            <button type="button" class="btn border rounded-2 d-flex flex-nowrap align-items-center justify-content-center gap-2" data-bs-dismiss="offcanvas">
-              <span class="material-symbols-outlined">keyboard_backspace</span>
-              <span>Back</span>
-            </button>
-          </div>
-          <div class="row gap-3" id="infoPais">
-            <!-- Aca van las cards con la info individual -->
-
-            
+            <div class="container-fluid gap-3" id="infoPais">
+              <!-- Aca van las cards con la info individual -->
+  
+              
+            </div>
           </div>
         </div>
       </div>
-    </div>
-
-  </main>
 </body>
 </html>
 
