--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
 
     <!-- Menu de busqueda -->
     <div class="conteiner-fluid mb-5">
-      <div class="row mw gap-3">
-        <div class="col-lg-4">
+      <div class="d-flex justify-content-between mw gap-3">
+        <div class="">
           <div class="d-flex border rounded-4 ">
             <span class="btn disabled border-0 material-symbols-outlined busq">search</span>
             <input class="form-control border-0 h-100" type="search" placeholder="Search  for a country" aria-label="search" id="buscar">
             <button id="limpiar" class="btn">x</button>
           </div>
         </div>
-        <div class="dropdown col-lg-3">
+        <div class="dropdown d-flex justify-content-end">
           <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="nombreRegion">
               Filter by Region
           </button>
